--- a/app/templates/pages/menus/current_tree.html
+++ b/app/templates/pages/menus/current_tree.html
@@ -5,7 +5,7 @@
 <ul class="nav-tree nav-tree--level-{{ branch_level }}">
     {% if branch_level == 0 %}
         {% for page in page_branch %}
-            {% if page.in_menu %}
+            {% if page.in_menu and page.has_children_in_menu %}
                 {% if page.is_primary and page.is_current_or_ascendant %}
                     <li class="nav-tree__item">
                         <a class="nav-tree__link{% if page.is_current %} active{% endif %}" href="{{ page.get_absolute_url }}">Accueil</a>
