--- a/app/templates/pages/menus/current_tree.html
+++ b/app/templates/pages/menus/current_tree.html
@@ -2,11 +2,11 @@
 
 {% spaceless %}
 {% if page_branch_in_menu %}
-<ul class="nav-tree nav-tree--level-{{ branch_level }}">
     {% if branch_level == 0 %}
         {% for page in page_branch %}
             {% if page.in_menu and page.has_children_in_menu %}
                 {% if page.is_primary and page.is_current_or_ascendant %}
+                <ul class="nav-tree nav-tree--level-{{ branch_level }}">
                     <li class="nav-tree__item">
                         <a class="nav-tree__link{% if page.is_current %} active{% endif %}" href="{{ page.get_absolute_url }}">Accueil</a>
                     </li>
@@ -15,6 +15,9 @@
                     {% if page.has_children_in_menu %}
                         {% page_menu page %}
                     {% endif %}
+                {% endif %}
+                {% if page.is_primary and page.is_current_or_ascendant %}
+                </ul>
                 {% endif %}
             {% endif %}
         {% endfor %}
@@ -38,6 +41,5 @@
             </li>
         {% endfor %}
     {% endif %}
-</ul>
 {% endif %}
 {% endspaceless %}
