--- a/app/templates/pages/basicpage.html
+++ b/app/templates/pages/basicpage.html
@@ -28,7 +28,7 @@
 {% block main %}
 
     <div class="row">
-        <div class="col-lg-8 col-md-push-2">
+        <div class="col-sm-9 col-sm-push-3 col-lg-8 col-lg-push-2">
             {% editable page.basicpage.title %}
                 <h1 class="dotted">{{ page.basicpage.title }}</h1>
             {% endeditable %}
@@ -36,10 +36,10 @@
     </div>
 
     <div class="row">
-        <div class="col-lg-2">
+        <div class="col-sm-3 col-lg-2">
             {% page_menu "pages/menus/current_tree.html" %}
         </div>
-        <div class="col-lg-8">
+        <div class="col-sm-9 col-lg-8">
             {% editable page.basicpage.content %}
                 {{ page.basicpage.content|richtext_filters|safe }}
             {% endeditable %}
