--- a/templates/includes/footer_scripts.html
+++ b/templates/includes/footer_scripts.html
@@ -4,6 +4,7 @@
     <script src="{% static "vendors/jquery/dist/jquery.min.js" %}"></script>
     <script src="{% static "vendors/overflow.js/js/overflow.js" %}"></script>
     <script src="{% static "vendors/sticky-kit/jquery.sticky-kit.js" %}"></script>
+    <script src="{% static "vendors/jquery-throttle-debounce/jquery.ba-throttle-debounce.js" %}"></script>
     <script src="{% static "js/index.min.js" %}"></script>
 {% block extra_js %}{% endblock %}
 {% editable_loader %}
