--- a/app/templates/pages/menus/current_tree_summary.html
+++ b/app/templates/pages/menus/current_tree_summary.html
@@ -7,9 +7,6 @@
             {% if page.in_menu and page.has_children_in_menu %}
                 {% if page.is_primary and page.is_current_or_ascendant %}
                 <ul class="nav-tree nav-tree--level-{{ branch_level }}" data-sticky data-sticky-parent="row" data-sticky-offset="100" data-sticky-detach-at="971">
-                    <li class="nav-tree__item">
-                        <a class="nav-tree__link{% if page.is_current %} active{% endif %}" href="{{ page.get_absolute_url }}">{% trans 'Accueil' %}</a>
-                    </li>
                 {% endif %}
                 {% if page.is_current_or_ascendant %}
                     {% if page.has_children_in_menu %}
@@ -24,23 +21,24 @@
     {% endif %}
     {% if branch_level == 1 %}
         {% for page in page_branch %}
-            <li class="nav-tree__item">
-                <a class="nav-tree__link{% if page.is_current or page.is_current_or_ascendant %} active{% endif %}" href="{{ page.get_absolute_url }}">{{ page.title }}</a>
-                {% if page.is_current_or_ascendant and page.has_children_in_menu %}
-                    <ul class="nav-tree nav-tree--level-{{ branch_level }}">
-                        {% page_menu page %}
-                    </ul>
-                {% endif %}
-            </li>
+            {% if page.is_current_or_ascendant and page.has_children_in_menu %}
+                <li class="nav-tree__item">
+                    <a class="nav-tree__link" href="{{ page.get_absolute_url }}">{% trans 'Accueil' %}</a>
+                </li>
+                {% page_menu page %}
+            {% endif %}
         {% endfor %}
     {% endif %}
     {% if branch_level == 2 %}
         {% for page in page_branch %}
-            {% comment %}
-            <li class="nav-tree__item nav-tree__item--sub">
-                <a class="nav-tree__link nav-tree__link--sub" href="{{ page.get_absolute_url }}">{{ page.title }}</a>
+            <li class="nav-tree__item">
+                <a class="nav-tree__link{% if page.is_current or page.is_current_or_ascendant %} active{% endif %}" href="{{ page.get_absolute_url }}">{{ page.title }}</a>
             </li>
-            {% endcomment %}
+            {% if page.is_current_or_ascendant %}
+                {% if page.has_children_in_menu %}
+                    {% page_menu page %}
+                {% endif %}
+            {% endif %}
         {% endfor %}
     {% endif %}
 {% endif %}
