--- a/app/templates/pages/basicpage.html
+++ b/app/templates/pages/basicpage.html
@@ -1,5 +1,4 @@
-{% extends "base.html" %}
-
+{% extends "pages/page.html" %}
 {% load i18n mezzanine_tags keyword_tags featured_tags pages_tags %}
 
 {% block meta_title %}{{ page.meta_title }}{% endblock %}
@@ -26,34 +25,24 @@
     {% endeditable %}
 {% endblock %}
 
-{% block main %}
 
-    <div class="row">
-        <div class="col-sm-9 col-sm-push-3 col-lg-8 col-lg-push-2">
-            {% editable page.basicpage.title %}
-                <h1 class="dotted">{{ page.basicpage.title }}</h1>
-            {% endeditable %}
-        </div>
-    </div>
 
-    <div class="row">
-        <div class="col-sm-3 col-lg-2">
-            {% if page.get_ascendants|length < 2 %}
-                {% page_menu "pages/menus/current_tree.html" %}
-            {% endif %}
-            {% if page.get_ascendants|length == 2 %}
-                {% page_menu "pages/menus/current_tree_summary.html" %}
-            {% endif %}
-        </div>
-        <div class="col-sm-9 col-lg-8">
-            {% editable page.basicpage.content %}
-                {{ page.basicpage.content|richtext_filters|safe }}
-            {% endeditable %}
+{% block page_title %}
 
-            {% comment %}
-                Add the slider here
-            {% endcomment %}
-        </div>
-    </div>
+    {% editable page.basicpage.title %}
+        <h1 class="dotted">{{ page.basicpage.title }}</h1>
+    {% endeditable %}
+
+{% endblock %}
+
+{% block page_content %}
+
+    {% editable page.basicpage.content %}
+        {{ page.basicpage.content|richtext_filters|safe }}
+    {% endeditable %}
+
+    {% comment %}
+        Add the slider here
+    {% endcomment %}
 
 {% endblock %}
