--- a/app/templates/pages/page.html
+++ b/app/templates/pages/page.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% load i18n mezzanine_tags keyword_tags featured_tags %}
+{% load i18n mezzanine_tags keyword_tags featured_tags pages_tags %}
 
 {% block meta_title %}{{ page.meta_title }}{% endblock %}
 
@@ -15,9 +15,31 @@
 {{ page.description }}
 {% endmetablock %}{% endblock %}
 
-{% block title %}
-{% editable page.title %}{{ page.title }}{% endeditable %}
-{% endblock %}
-
 {% block main %}
+
+    <div class="row">
+        <div class="col-sm-9 col-sm-push-3 col-lg-8 col-lg-push-2">
+            {% block page_title %}
+                {{ page.title }}
+            {% endblock %}
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-3 col-lg-2">
+            {% block page_sidebar %}
+                {% if page.get_ascendants|length < 2 %}
+                    {% page_menu "pages/menus/current_tree_primary.html" %}
+                {% endif %}
+                {% if page.get_ascendants|length == 2 %}
+                    {% page_menu "pages/menus/current_tree_secondary.html" %}
+                {% endif %}
+            {% endblock %}
+        </div>
+        <div class="col-sm-9 col-lg-8">
+            {% block page_content %}
+                {{ page.content }}
+            {% endblock %}
+        </div>
+    </div>
+
 {% endblock %}
