--- a/templates/pages/menus/current_tree_summary.html
+++ b/templates/pages/menus/current_tree_summary.html
@@ -1,3 +1,3 @@
-{% comment %}
-We will use JS to populate the menu
-{% endcomment %}
+<li class="nav-tree__item nav-tree__item--sub hide">
+    <a class="nav-tree__link nav-tree__link--sub" href="#"></a>
+</li>
