--- a/templates/pages/page.html
+++ b/templates/pages/page.html
@@ -16,30 +16,36 @@
 {% endmetablock %}{% endblock %}
 
 {% block main %}
+    <div class="page page--{% spaceless %}{% block page_class %}{% endblock %}{% endspaceless %}">
 
-    <div class="row">
-        <div class="col-sm-9 col-sm-push-3 col-lg-8 col-lg-push-2">
-            {% block page_title %}
-                {{ page.title }}
-            {% endblock %}
+        <div class="row">
+            <div class="col-sm-9 col-sm-push-3 col-lg-8 col-lg-push-2">
+                {% block page_title %}
+                    {{ page.title }}
+                {% endblock %}
+            </div>
         </div>
-    </div>
-    <div class="row">
-        <div class="col-sm-3 col-lg-2">
-            {% block page_sidebar %}
-                {% if page.get_ascendants|length < 2 %}
-                    {% page_menu "pages/menus/current_tree_primary.html" %}
-                {% endif %}
-                {% if page.get_ascendants|length == 2 %}
-                    {% page_menu "pages/menus/current_tree_secondary.html" %}
-                {% endif %}
-            {% endblock %}
+        <div class="row">
+            <div class="col-sm-3 col-lg-2">
+                <div class="page__sidebar">
+                    {% block page_sidebar %}
+                        {% if page.get_ascendants|length < 2 %}
+                            {% page_menu "pages/menus/current_tree_primary.html" %}
+                        {% endif %}
+                        {% if page.get_ascendants|length == 2 %}
+                            {% page_menu "pages/menus/current_tree_secondary.html" %}
+                        {% endif %}
+                    {% endblock %}
+                </div>
+            </div>
+            <div class="col-sm-9 col-lg-8">
+                <div class="page__content" data-summary-content>
+                    {% block page_content %}
+                        {{ page.content }}
+                    {% endblock %}
+                </div>
+            </div>
         </div>
-        <div class="col-sm-9 col-lg-8">
-            {% block page_content %}
-                {{ page.content }}
-            {% endblock %}
-        </div>
-    </div>
 
+    </div>
 {% endblock %}
