--- a/static/src/sass/modules/_dashed.scss
+++ b/static/src/sass/modules/_dashed.scss
@@ -32,4 +32,13 @@ $module: ".dashed";
 
     }
 
+    &--center {
+
+        @include padding(0 .5);
+        &:before {
+            display: none;
+        }
+
+    }
+
 }
