--- a/templates/magazine/article/article_detail.html
+++ b/templates/magazine/article/article_detail.html
@@ -1,5 +1,5 @@
-{% extends "magazine/article/article_list.html" %}
-{% load mezzanine_tags comment_tags keyword_tags rating_tags i18n disqus_tags featured_tags %}
+{% extends "pages/page.html" %}
+{% load mezzanine_tags keyword_tags i18n featured_tags %}
 
 {% block meta_title %}{{ article.meta_title }}{% endblock %}
 
@@ -9,139 +9,68 @@
 {% endmetablock %}{% endblock %}
 
 {% block meta_description %}{% metablock %}
-{{ article.description }}
+    {{ article.description }}
 {% endmetablock %}{% endblock %}
 
-{% block title %}
-{% editable article.title %}{{ article.title }}{% endeditable %}
+{% block page_class %}
+    article
 {% endblock %}
 
 {% block breadcrumb_menu %}
-{{ block.super }}
-<li class="active">{{ article.title }}</li>
+    {{ block.super }}
+    <li class="active">{{ article.title }}</li>
 {% endblock %}
 
-{% block main %}
-{% block blog_post_detail_postedby %}
-{% editable article.publish_date %}
-<h6 class="post-meta">
-    {% trans "published on" %} {{ article.publish_date|date:"DATE_FORMAT" }}
-</h6>
-{% endeditable %}
+{% block page_title %}
+
+    {% editable article.title %}
+        <h1>{{ article.title }}</h1>
+    {% endeditable %}
+
 {% endblock %}
-{% block blog_post_detail_commentlink %}
-<p>
-    {% if article.allow_comments %}
-        {% if settings.COMMENTS_DISQUS_SHORTNAME %}
-            (<a href="{{ article.get_absolute_url }}#disqus_thread"
-                data-disqus-identifier="{% disqus_id_for article %}">{% spaceless %}
-                {% trans "Comments" %}
-            {% endspaceless %}</a>)
-        {% else %}(<a href="#comments">{% spaceless %}
-            {% blocktrans count comments_count=article.comments_count %}{{ comments_count }} comment{% plural %}{{ comments_count }} comments{% endblocktrans %}
-            {% endspaceless %}</a>)
-        {% endif %}
+
+{% block page_content %}
+
+    {% editable article.content %}
+        {{ article.content|richtext_filters|safe }}
+    {% endeditable %}
+
+{% endblock %}
+
+{% block page_sub_content %}
+
+    {% comment %}
+    Don't know why this doesn't work :(
+    {% endcomment %}
+    {% if related_posts %}
+        <hr />
+        <h2 class="dashed dashed--center">{% trans "Also discover" %}</h2>
+        {% for post in related_posts %}
+            {% include 'magazine/article/includes/article_card.html' %}
+        {% endfor %}
     {% endif %}
-</p>
-{% endblock %}
 
-{% comment %}
-{% block blog_post_detail_featured_image %}
-{% if settings.BLOG_USE_FEATURED_IMAGE and article.featured_image %}
-<p><img class="img-responsive" src="{{ MEDIA_URL }}{% thumbnail article.featured_image 600 0 %}"></p>
-{% endif %}
-{% endblock %}
-{% endcomment %}
+    <hr />
 
-{% if settings.COMMENTS_DISQUS_SHORTNAME %}
-{% include "generic/includes/disqus_counts.html" %}
-{% endif %}
-
-{% block blog_post_detail_content %}
-{% editable article.content %}
-{{ article.content|richtext_filters|safe }}
-{% endeditable %}
-{% endblock %}
-
-{% block blog_post_detail_keywords %}
-{% keywords_for article as tags %}
-{% if tags %}
-{% spaceless %}
-<ul class="list-inline tags">
-    <li>{% trans "Tags" %}:</li>
-    {% for tag in tags %}
-    <li><a href="{% url "blog_post_list_tag" tag.slug %}">{{ tag }}</a>{% if not forloop.last %}, {% endif %}</li>
-    {% endfor %}
-</ul>
-{% endspaceless %}
-{% endif %}
-{% endblock %}
-
-{% comment %}
-{% block blog_post_detail_rating %}
-<div class="panel panel-default rating">
-    <div class="panel-body">
-    {% rating_for article %}
+    <div class="tac">
+        <h2 class="dashed dashed--center">{% trans "Also discover" %}</h2>
+        <div class="row">
+            {% include 'magazine/article/includes/article_card.html' %}
+        </div>
     </div>
-</div>
-{% endblock %}
-{% endcomment %}
-
-{% block event_detail_sharebuttons %}
-  {% with article as object %}
-    {% include "includes/share_buttons.html" %}
-  {% endwith %}
 {% endblock %}
 
-{% block blog_post_previous_next %}
-<ul class="pager">
-{% with article.get_previous_by_publish_date as previous %}
-{% if previous %}
-<li class="previous">
-    <a href="{{ previous.get_absolute_url }}">&larr; {{ previous }}</a>
-</li>
-{% endif %}
-{% endwith %}
-{% with article.get_next_by_publish_date as next %}
-{% if next %}
-<li class="next">
-    <a href="{{ next.get_absolute_url }}">{{ next }} &rarr;</a>
-</li>
-{% endif %}
-{% endwith %}
-</ul>
-{% endblock %}
+{% block page_sidebar %}
 
-
-{% block blog_post_detail_related_posts %}
-{% if related_posts or article.events.all %}
-<div id="related-posts">
-<h3>{% trans "Also discover" %}</h3>
- <div class="msry__container">
-    <div class="msry__sizer"></div>
-    {% for post in related_posts %}
-        {% include 'blog/includes/post_card.html' %}
-    {% endfor %}
-    {% for event in article.events.all|no_parents %}
-        {% for artist in event.artists.all %}
-            {% include "festival/inc/artist_card.html" %}
-        {% endfor %}
-        {% for video in event.videos.all %}
-            {% include 'festival/inc/video_card.html' %}
-        {% endfor %}
-        {% for post in event.blog_posts.all %}
-          {% if post != article %}
-            {% include 'blog/includes/post_card.html' %}
-          {% endif %}
-        {% endfor %}
-    {% endfor %}
- </div>
-</div>
-{% endif %}
-{% endblock %}
-
-{% block blog_post_detail_comments %}
-{% if article.allow_comments %}{% comments_for article %}{% endif %}
-{% endblock %}
+    <div class="page__meta">
+        {% editable article.publish_date %}
+            <h6 class="post-meta">
+                {{ article.publish_date|date:"DATE_FORMAT" }}
+            </h6>
+        {% endeditable %}
+        {% with article as object %}
+            {% include "includes/share_buttons.html" %}
+        {% endwith %}
+    </div>
 
 {% endblock %}
